# bounce-rl

./: .gitignore  CLAUDE_UNIT_TESTING.md  Dockerfile  Dockerfile (ubuntu)  LICENSE  Makefile  README.md  Rewards.py  _record_demo.py  _run.py  analysis.py  annotations.json  app_configs.py  build.py  build.sh  camera_calibration.ini  camera_node.pxd  camera_node.pyx  clear_memories.sh  config.gin  csv_logger.py  dlfcn_intercept.cpp  export.sh  fps_helper.py  gl_inject.py  harness.py  image_capture.c  image_capture.h  image_capture.pxd  image_capture.pyx  image_viewer.py  input_design.txt  install_python_envs.sh  keyboard.py  ld_run.sh  libc_time_intercepts.cpp  load_demo.py  meson.build  model.py  pyproject.toml  (+12 more)
bounce_rl/: config.yaml  meson.build  template_matching.py
bounce_rl/configs/: aor_rois.json  app_configs.py  run_noita.sh
bounce_rl/console/: console.cpp
bounce_rl/containers/: run.sh  steam_in_docker_note.md
bounce_rl/core/: app.py  app_environment.py  app_environment_test.py  app_session.py  app_session_test.py  callbacks.py  environment.py  fake_app.py  fake_app_session.py  gym_types.py  harness.py  meson.build
bounce_rl/core/containers/: build.sh  container.py  setup_test.sh
bounce_rl/core/image_capture/: image_capture.c  image_capture.h  image_capture.pxd  image_capture.pyx  meson.build
bounce_rl/core/keyboard/: bind_virtual_device.cpp  example.py  keyboard.py  lib_mpx_input.h  lib_mpx_input.py  meson.build  send_event_input.py  virtual_device.cpp  virtual_device.h
bounce_rl/core/launcher/: container.py  launcher.py  server.py  x_search.py
bounce_rl/core/time_control/: install_time_control.sh  meson.build  time_control.cpp  time_control.h  time_writer.py
bounce_rl/environments/: art_of_rally.py  env_rally.py  eval_reward.py  factorio_app.py  factorio_app_test.py  factorio_env_test.py  factorio_macro.py  factorio_matcher.py  factorio_matcher_test.py  mock_env.py  model_lib.py
bounce_rl/environments/noita/: noita_env.py  noita_env_test.py  noita_info.py  noita_integration_test.py  noita_reward.py  noita_reward_test.py
bounce_rl/environments/noita/initial_save00/: mod_config.xml
bounce_rl/environments/noita/initial_save00/persistent/flags/: action_light_bullet
bounce_rl/environments/noita/initial_save00/stats/: _stats.salakieli
bounce_rl/environments/noita/initial_save00/stats/sessions/: 20240427-205709_kills.xml  20240427-205709_stats.xml
bounce_rl/environments/noita/mod/: golden_config.xml  init.lua  mod.xml
bounce_rl/environments/noita/mod/files/: magic_numbers_template.xml
bounce_rl/gym/env/: fake_test_env.py  pool_vec_env.py
bounce_rl/gym/wrappers/: fake_gym.py  gym_to_dmc_test.py
bounce_rl/input/: __init__.py  allowed_inputs.py  allowed_inputs_test.py  benchmark.py  event_dispatch.py  event_dispatch_test.py  gym_input.py  gym_input_test.py  input_processor.py  input_processor_test.py  input_types.py  keys.py  xtest.py
bounce_rl/platform/: display_connection.py  window_connection.py
bounce_rl/platform/graphics/: image_capture.py
bounce_rl/scripts/: Makefile  gather_images.py  lower_window.cpp  mirror_window.cpp  noita_sb3.py  noita_test.py  repro_too_many_connections.py
bounce_rl/test/: Makefile  event_delivery.cpp  xi_event_test.c  xi_test.c
bounce_rl/test/X11/: query_pointer.cpp
bounce_rl/utilities/: csv_logger.py  paths.py  test_util.py  util.py
bounce_rl/x_multiseat/: proxy.py  proxy_test.py  proxy_test_child.py
bounce_rl/x_proxy/: anc_data_util.py  old_proxy.py  proxy_main.py  reply_connection.py  request_connection.py  server_state.py  x_overrides.py
callbacks/: callbacks.py
compression/: Makefile  comp.cc  comp.py  lodepng.h
compression/cpu/: Makefile  coded_buffer.cc  coded_buffer.h  coded_buffer_benchmark.cc  comp.cc  comp.py  comp_kernel.c  fast_map.h  fast_map_benchmark.cc  util.h
compression/gpu/: Makefile  comp.spv  fake.cc  fill_buffer.comp  four_byte_writer.cc  main.cc  write_values.cc  write_values_full.cc
configs/: app_configs.py  config.gin  run_noita.sh
docs/: Makefile
docs/source/: adding_envs.rst  api.rst  conf.py  index.rst  introduction.rst  noita.rst
docs/source/_static/: theme.css
docs/source/api/: harness.rst
docs/source/environments/: noita.rst
docs/src/: conf.py  index.rst  my_doc.rst
modeling/: MC_Extracations_csv.csv  annotation_request.csv  crop_to_dbg.py  crops.csv  dataset.py  dbg_binarize.py  labeled_segments.csv  operators.py  ops.py  ops_conf.py  overdraw_conf.py  request.csv  view.py  workflows.py
mods/noita/: README.md  golden_config.xml  init.lua
mods/noita/data/: magic_numbers.xml
rewards/: art_of_rally.py  env_rally.py  mock_env.py  model_lib.py  noita.py  noita_env.py  noita_info.py  noita_reward.py  test_noita_reward.py
scripts/: _run.py  ld_run.sh  record_demo.sh  run.sh  sb3_aor.py
src/: Makefile  camera_node.h  child.cpp  focus.c  image_capture.c  image_capture.h  image_capture.pxd  runner.c  time_control.cpp  time_control.h  time_control_test.cpp  time_writer.py  util.py  window.c
src/LWX/: proxy.py
src/bounce_rl/: profiler.py  profiler_test.py
src/connected_components/: connected_components.py  cv_components.py  trigger_loading.py
src/console/: console.py
src/containers/: Dockerfile  container.py
src/env/: pool_vec_env.py  pool_vec_env_test.py  subproc_env.py  subproc_env_test.py
src/keyboard/: Makefile  controller.py  ds4drv_input.py  lib_mpx_input.c  lib_mpx_input.h  lib_mpx_input.py  virtual_device.cpp  virtual_device.h  virtual_device2.cpp
src/labels/: compound_labels.csv  parse.py  write.py
src/monitoring/: log_connections.sh  log_it.sh
src/scripts/: _run.py  mock_sb3.py  mute.sh  noita_drqv2.py  noita_sb3.py  prune_memory.py  warm_start.py
src/test_code/: focus
src/wrappers/: gym_to_dmc.py
src/x_multiseat/: proxy.py
test/rewards/: test_art_of_rally.py
test/scripts/: noita_test.py
x_proxy/: proxy.py  serial_numbers.txt
