[project]
name = "BounceRL"
version = "0.0.51"
description = "Bounce RL"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "William Henning", email = "wchenningwchenning@gmail.com" },
]
dependencies = [
    "numpy>=2.2.0,<3.0.0",
    "libtimecontrol>=0.2.1,<0.3.0",
    "factorio-state-exporter",
    "gymnasium>=1.2.2,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pillow>=12.0.0,<13.0.0",
    "pyyaml (>=6.0.3,<7.0.0)",
    "bounce-desktop>=0.4.5",
]

[tool.uv.sources]
factorio-state-exporter = { git = "https://github.com/Whenning42/factorio-state-exporter.git" }

[tool.setuptools.packages.find]
where = ["."]
include = ["bounce_rl*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
